# ozi-rs

./: .gitignore  .mcp.json  .prettierignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  THIRD_PARTY_LICENSES.md  components.json  eslint.config.js  index.html  justfile  opencode.json  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
.cargo/: audit.toml
.github/workflows/: ci.yml  release.yml
.opencode/: oh-my-opencode.json.bak
.opencode/commands/: docs-sync.md  implement.md  kickoff.md  test.md
.sisyphus/: boulder.json
.sisyphus/evidence/: final-wave-f3-opencode-mcp-list.txt  final-wave-f3-self-check.parse.txt  final-wave-f3-smoke-report-parse.txt  final-wave-repair-appium-tests.txt  final-wave-repair-cargo-test-ozi-rs-mcp.txt  final-wave-repair-clippy.txt  final-wave-repair-protected-diffs.txt  final-wave-repair-smoke-report.pretty.json  final-wave-repair-smoke-workflow.txt  task-1-clippy-before.txt  task-1-mcp-test.txt  task-1-run-stderr.txt  task-1-tauri-no-run.txt  task-1-tests-pass.txt  task-1-warning-inventory.md  task-1-workspace-metadata.json  task-10-douglas-peucker.txt  task-11-full-verification.txt  task-11-move-point.txt  task-11-static-audit.txt  task-11-targeted-verification.txt  task-12-delete-point.txt  task-13-insert-point.txt  task-14-split.txt  task-15-join.txt  task-16-delete-track.txt  (+58 more)
docs/: agent-verification.md  architecture.md  ci.md  commands-reference.md  conventions.md  feature-status.md  frontend-architecture.md  glossary.md  native-qa-mcp.md  persistence-session.md  project-map.md  requirements.md  roadmap.md  testing-strategy.md
scripts/: check-release-warnings.sh
src/: App.svelte  app.css  app.html  lib.rs  main.rs  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.sisyphus/evidence/: task-37-empty-track.txt
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/application/: commands.rs  import.rs  mod.rs
src-tauri/src/commands/: mod.rs  tiles.rs
src-tauri/src/domain/: mod.rs  project.rs  track.rs  waypoint.rs
src-tauri/src/infrastructure/: lizaalert.rs  persistence.rs
src-tauri/src/infrastructure/export/: gpx.rs  mod.rs  plt.rs  wpt.rs
src-tauri/src/infrastructure/import/: archive.rs  gpx.rs  mod.rs  ozi_georeference.rs  ozi_map.rs  ozi_raster.rs  plt.rs
tests/: application_zip_gpx_import.rs  archive_inventory.rs  import_gpx_archive.rs  import_ozi_map_metadata.rs  import_ozi_raster.rs
tools/ozi-rs-mcp/: Cargo.toml
tools/ozi-rs-mcp/src/: appium.rs  config.rs  evidence.rs  lib.rs  main.rs  native.rs  process.rs  server.rs  types.rs
tools/ozi-rs-mcp/tests/: appium.rs  evidence.rs  native.rs  smoke_bundle_and_maps.rs  smoke_workflow.rs
(+325 files in other folders)
