[package]
name = "ozi-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.34.1"
lru = "0.16"
regex = "1.12"
reqwest = { version = "0.13.2", default-features = false, features = ["blocking"] }
rusqlite = { version = "0.39.0", features = ["bundled"] }
walkers = "0.53.0"
gpx = "0.10"
zip = { version = "8.4", default-features = false, features = ["deflate"] }
