[package]
name = "ozi-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = { version = "0.34.1", features = ["persistence"] }
lru = "0.16"
regex = "1.12"
reqwest = { version = "0.13.2", default-features = false, features = ["blocking", "rustls"] }
rusqlite = { version = "0.39.0", features = ["bundled"] }
walkers = "0.53.0"
chrono = { version = "0.4", features = ["serde"] }
gpx = "0.10"
zip = { version = "8.4", default-features = false, features = ["deflate"] }
ozf2-rs = { path = "../ozf2-rs" }
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
