[package]
name = "ozi-rs-mcp"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "ozi-rs-mcp"
path = "src/main.rs"

[dependencies]
anyhow = "1"
rmcp = { version = "1.5", features = ["server", "transport-io", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "fs", "io-util", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
tempfile = "3"
